--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,59 @@
 			"command": "npm install",
 			"group": "build",
 			"problemMatcher": []
+		},
+		{
+			"label": "Astro: Servidor de desarrollo",
+			"type": "shell",
+			"command": "npm run dev",
+			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "new"
+			},
+			"isBackground": true,
+			"problemMatcher": []
+		},
+		{
+			"label": "Astro: Construir para producción",
+			"type": "shell",
+			"command": "npm run build",
+			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "new"
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Astro: Previsualizar build",
+			"type": "shell",
+			"command": "npm run preview",
+			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "new"
+			},
+			"problemMatcher": []
+		},
+		{
+			"label": "Generar imágenes placeholder",
+			"type": "shell",
+			"command": "node generate-placeholders.js",
+			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "new"
+			},
+			"problemMatcher": []
 		}
 	]
 }
